<resources>
    <string name="app_name">Luxury Car</string>

    <!-- common messages -->
    <string name="app_exit">Exit</string>
    <string name="title_ok">OK</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_activity_company">CompanyActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_register"> <u>Register</u></string>

    <string name="error_empty_name">Please enter name.</string>
    <string name="error_empty_email">Please enter email.</string>
    <string name="error_empty_mobile_no">Please enter mobile no.</string>
    <string name="error_invalid_email">Please enter valid email.</string>
    <string name="error_empty_password">Please enter password.</string>
    <string name="error_empty_confirm_password">Please enter confirm password.</string>
    <string name="error_password_not_match">Please enter the same  password.</string>
    <string name="titlr_login">Login</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="please_enter_your_login_details">Please Enter Your Login Details</string>
    <string name="title_forgot_password">Forgot Password?</string>
    <string name="johndeo_hotmail_com">johndeo@hotmail.com</string>
    <string name="str_password">********</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="or">Or</string>
    //// Navigation drawer
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>

    <string name="menu_gallery">Gallery</string>

    <string name="menu_slideshow">Slideshow</string>

    <string name="home_fragment">Home</string>

    <string name="contact_fragment">Contact</string>

    <string name="follow_us_fragment">Follow Us</string>

    <string name="menu_aboutus">About Us</string>

    <string name="menu_car_listing">Car Listings</string>

    <string name="menu_transport">Transport/Export</string>

    <string name="menu_soucing">Sourcing</string>

    <string name="menu_Inspecting">Inspecting</string>

    <string name="menu_sellur_car">Sell your Car</string>
    <string name="more_options"><u>More Options +</u></string>


    /////////////////////////

    <string name="view_profile">View Profile</string>
    <string name="language">Language</string>
    <string name="terms_condition">Terms &amp; Condition</string>
    <string name="logout">Logout</string>
    <string name="title_storage">Storage</string>
    <string name="title_to_buy">To Buy</string>
    <string name="title_to_rent">To Rent</string>
    <string name="title_select_make">Select Make</string>
    <string name="title_select_model">Select Model</string>
    <string name="title_year_from">Year From</string>
    <string name="title_year_to">Year To</string>
    <string name="title_price_from">Price From</string>
    <string name="title_price_to">Price To</string>
    <string name="title_search">Search</string>
    <string name="title_car_listing">Car listing</string>
    <string name="str_sort_by">Sort By</string>
    <string name="str_featured">Featured</string>
    <string name="str_chevrolet_camaroerui">Chevrolet Camaroerui</string>
    <string name="str_year">2019</string>
    <string name="str_kilometer">49000km</string>
    <string name="str_aed_168_000">AED 168,000</string>
    <string name="titlr_enquire">Enquire</string>
    <string name="str_what_s_included">What\'s Included?</string>
    <string name="str_engine_starts">Engine Starts</string>
    <string name="str_anti_flat_spot_management">Anti-Flat Spot Management</string>
    <string name="str_insurance">Insurance</string>
    <string name="str_battery_trickle_vharging">Battery Trickle Charging</string>
    <string name="str_interior_preparation_and_sanitization">Interior Preparation and Sanitization</string>
    <string name="str_tire_rotation_and_checks"><![CDATA[Tire Rotation & Checks]]></string>

    //////////////////////////////
</resources>