<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_15_dp"
    android:layout_marginStart="@dimen/margin_15_dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <androidx.cardview.widget.CardView
       android:layout_width="@dimen/margin_150_dp"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:cardCornerRadius="@dimen/margin_5dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">
      <ImageView
          android:id="@+id/imgViewItemCar"
          android:layout_width="match_parent"
          android:layout_height="@dimen/margin_100_dp"
          android:scaleType="fitXY"
          android:src="@drawable/demo_image1"
          />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:orientation="vertical"
           android:padding="@dimen/margin_5dp"
            android:background="@color/color_light_black">
           <TextView
               android:id="@+id/txtViewChevrolet"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/str_chevrolet_camaroerui"
               android:maxLines="1"
               android:textColor="@color/white"
               android:textSize="@dimen/txt_size_15sp"
               android:ellipsize="end"
               />
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/margin_3dp"
               android:orientation="horizontal">

              <TextView
                  android:id="@+id/txtViewModel"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/str_year"
                  android:layout_weight="1"
                  android:textColor="@color/white"
                  android:gravity="center"
                 android:textSize="@dimen/margin_13sp"
                 android:background="@drawable/drawable_button_background"/>

              <TextView
                  android:id="@+id/txtViewPrice"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                 android:text="@string/str_kilometer"
                  android:textSize="@dimen/margin_13sp"
                  android:layout_marginStart="@dimen/margin_10_dp"
                 android:textColor="@color/text_color_grey"
                 android:layout_weight="1"/>


           </LinearLayout>
           <TextView
               android:id="@+id/txtViewAED"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/str_aed_168_000"
               android:layout_marginTop="@dimen/margin_3dp"
               android:textColor="@color/white"
               android:textSize="@dimen/txt_size_15sp"/>
        </LinearLayout>

      </LinearLayout>

   </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>