<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    tools:context=".code_files.ui.auth.fragment.LoginFragment">


          <ScrollView
              android:layout_width="0dp"
              android:layout_height="0dp"
              android:fillViewport="true"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintBottom_toTopOf="@+id/consLayoutBottom">

              <androidx.constraintlayout.widget.ConstraintLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">



                  <ImageView
                      android:id="@+id/imgViewLogo"
                      android:layout_width="@dimen/margin_100_dp"
                      android:layout_height="@dimen/margin_100_dp"
                      android:layout_marginBottom="@dimen/margin_10_dp"
                      android:src="@mipmap/ic_main_logo"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintBottom_toTopOf="@+id/txtViewLoginTitle"
                      android:contentDescription="@string/app_name" />




                  <TextView
                      android:id="@+id/txtViewLoginTitle"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/titlr_login"
                      android:fontFamily="@font/muli_bold"
                      style="@style/TextViewHeading"
                       android:layout_marginBottom="@dimen/margin_7dp"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintBottom_toTopOf="@id/txtViewLoginMessage" />

                  <TextView
                      android:id="@+id/txtViewLoginMessage"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:minLines="1"
                      android:fontFamily="@font/muli_bold"
                      android:text="@string/please_enter_your_login_details"
                      android:textSize="15sp"
                      android:layout_marginBottom="@dimen/margin_25_dp"
                      android:textColor="@color/sub_title_color"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintBottom_toTopOf="@id/consLayoutChild" />



                  <androidx.constraintlayout.widget.ConstraintLayout
                      android:id="@+id/consLayoutChild"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toTopOf="parent"
                      android:layout_marginTop="@dimen/margin_20_dp"
                      app:layout_constraintBottom_toBottomOf="parent">


                      <TextView
                          android:id="@+id/txtViewEmail"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/title_email"
                          android:textAllCaps="true"
                          android:fontFamily="@font/muli_bold"
                          android:textColor="@color/black"
                          android:textSize="14sp"
                          app:autoSizeStepGranularity="2sp"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintTop_toTopOf="parent" />

                      <EditText
                          android:id="@+id/edtTextEmail"
                          style="@style/EditTextField"
                          android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:hint="@string/johndeo_hotmail_com"
                          android:inputType="textEmailAddress"
                          android:gravity="center_vertical"
                          app:layout_constraintTop_toBottomOf="@+id/txtViewEmail"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintEnd_toEndOf="parent"

                          />

                      <View
                          android:id="@+id/view"
                          android:layout_width="0dp"
                          android:layout_height="1dp"
                          android:background="@color/view_color"
                          app:layout_constraintEnd_toEndOf="@+id/edtTextEmail"
                          app:layout_constraintStart_toStartOf="@+id/edtTextEmail"
                          app:layout_constraintTop_toBottomOf="@+id/edtTextEmail" />



                      <TextView
                          android:id="@+id/txtViewPassword"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="15dp"
                          android:text="@string/title_password"
                          android:textAllCaps="true"
                          android:textColor="@color/black"
                          android:fontFamily="@font/muli_bold"
                          android:textSize="14sp"
                          app:autoSizeStepGranularity="2sp"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintTop_toBottomOf="@+id/edtTextEmail" />

                      <EditText
                          android:id="@+id/edtTextPassword"
                          android:layout_width="@dimen/margin_0dp"
                          android:layout_height="wrap_content"
                          style="@style/EditTextField"
                          android:paddingEnd="40dp"
                          android:hint="@string/str_password"
                          android:inputType="textPassword"
                          android:gravity="center_vertical"
                          app:layout_constraintTop_toBottomOf="@+id/txtViewPassword"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintEnd_toEndOf="parent"
                          />
                      <View
                          android:id="@+id/view2"
                          android:layout_width="0dp"
                          android:layout_height="1dp"
                          android:background="@color/view_color"
                          app:layout_constraintEnd_toEndOf="@+id/edtTextPassword"
                          app:layout_constraintStart_toStartOf="@+id/edtTextPassword"
                          app:layout_constraintTop_toBottomOf="@+id/edtTextPassword"
                          app:layout_constraintVertical_bias="0.0" />

                      <ImageView
                          android:id="@+id/imgViewEye"
                          android:layout_width="40dp"
                          android:layout_height="40dp"
                          android:padding="10dp"
                          android:layout_marginEnd="5dp"
                          android:src="@mipmap/ic_hide_icon"
                          app:layout_constraintEnd_toEndOf="parent"
                          app:layout_constraintTop_toTopOf="@id/edtTextPassword"
                          app:layout_constraintBottom_toBottomOf="@id/edtTextPassword"
                          />

                      <TextView
                          android:id="@+id/txtViewForgotPassword"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/title_forgot_password"
                          android:textSize="15sp"
                          android:layout_marginTop="10dp"
                          android:fontFamily="@font/muli_bold"
                          android:textColor="#AAACBB"
                          app:layout_constraintTop_toBottomOf="@+id/edtTextPassword"
                          app:layout_constraintEnd_toEndOf="parent"
                          />
                  </androidx.constraintlayout.widget.ConstraintLayout>




                  <androidx.appcompat.widget.AppCompatButton
                      android:id="@+id/btnLogin"
                      style="@style/buttonFieldStyle"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:textAllCaps="true"
                      android:text="@string/titlr_login"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/consLayoutChild"
                      />
                  <androidx.constraintlayout.widget.ConstraintLayout
                      android:id="@+id/consLayoutOR"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="20dp"
                      app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                      app:layout_constraintStart_toStartOf="@+id/btnLogin"
                      app:layout_constraintTop_toBottomOf="@+id/btnLogin">


                      <View
                          android:layout_width="65dp"
                          android:layout_height="1.5dp"
                          android:layout_marginEnd="10dp"
                          android:background="#619D83"
                          app:layout_constraintBottom_toBottomOf="parent"
                          app:layout_constraintEnd_toStartOf="@id/txtViewOr"
                          app:layout_constraintTop_toTopOf="parent" />


                      <TextView
                          android:id="@+id/txtViewOr"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="5dp"
                          android:layout_marginRight="5dp"
                          android:text="@string/or"
                          android:fontFamily="@font/muli_bold"
                          android:textColor="@color/black"
                          android:textSize="15sp"
                          app:layout_constraintBottom_toBottomOf="parent"
                          app:layout_constraintEnd_toEndOf="parent"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintTop_toTopOf="parent" />

                      <View
                          android:layout_width="65dp"
                          android:layout_height="1.5dp"
                          android:layout_marginStart="10dp"
                          android:background="#619D83"
                          app:layout_constraintBottom_toBottomOf="parent"
                          app:layout_constraintStart_toEndOf="@id/txtViewOr"
                          app:layout_constraintTop_toTopOf="parent" />


                  </androidx.constraintlayout.widget.ConstraintLayout>
                  <androidx.constraintlayout.widget.ConstraintLayout
                      android:id="@+id/consLayoutImage"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="20dp"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/consLayoutOR">

                      <ImageView
                          android:id="@+id/imgViewFbLogin"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:src="@mipmap/ic_facebook"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintTop_toTopOf="parent" />


                      <ImageView
                          android:id="@+id/imgViewGoogleLogin"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginStart="10dp"
                          android:src="@mipmap/ic_google"
                          app:layout_constraintStart_toEndOf="@+id/imgViewFbLogin"
                          app:layout_constraintTop_toTopOf="parent" />


                  </androidx.constraintlayout.widget.ConstraintLayout>



              </androidx.constraintlayout.widget.ConstraintLayout>




          </ScrollView>






    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consLayoutBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/margin_5dp"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtViewDontHaveAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:textSize="15sp"
            android:fontFamily="@font/muli_semi_bold"
            android:textColor="#AAACBB"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/title_register"
            android:fontFamily="@font/muli_semi_bold"
            android:textSize="15sp"
            android:textColor="@color/green"
            app:layout_constraintBottom_toBottomOf="@+id/txtViewDontHaveAcc"
            app:layout_constraintStart_toEndOf="@+id/txtViewDontHaveAcc"
            app:layout_constraintTop_toTopOf="@+id/txtViewDontHaveAcc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/progressBarLoginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>