<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".code_files.ui.change_password.ForgotPassword">



  <ImageView
      android:id="@+id/imgViewLogo"
      android:layout_width="@dimen/margin_100_dp"
      android:layout_height="@dimen/margin_100_dp"
      android:layout_marginBottom="@dimen/margin_10_dp"
      android:src="@mipmap/ic_main_logo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/txtViewLoginTitle"
      android:contentDescription="@string/app_name" />




  <TextView
      android:id="@+id/txtViewLoginTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Forgot Password"
      android:fontFamily="@font/muli_bold"
      style="@style/TextViewHeading"
      android:layout_marginBottom="@dimen/margin_7dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toTopOf="@id/txtViewLoginMessage" />

  <TextView
      android:id="@+id/txtViewLoginMessage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minLines="1"
      android:fontFamily="@font/muli_bold"
      android:text="Please Enter Your Email"
      android:textSize="15sp"
      android:layout_marginBottom="@dimen/margin_25_dp"
      android:textColor="@color/sub_title_color"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toTopOf="@id/consLayoutChild" />
  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/consLayoutChild"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:paddingStart="@dimen/margin_15_dp"
      android:paddingEnd="@dimen/margin_15_dp">

    <TextView
        android:id="@+id/txtViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_email"
        android:textAllCaps="true"
        android:fontFamily="@font/muli_bold"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTextEmail"
        style="@style/EditTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/johndeo_hotmail_com"
        android:inputType="textEmailAddress"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/txtViewEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/view_color"
        app:layout_constraintEnd_toEndOf="@+id/edtTextEmail"
        app:layout_constraintStart_toStartOf="@+id/edtTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtTextEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        style="@style/buttonFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/margin_25_dp"
        android:text="Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>